Fixed layout issue in birthday game

--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,7 @@ main {
 
 .controlsDiv {
 	display: inline-block;
-	max-width: 400px;
+	max-width: 300px;
 	vertical-align: middle;
 	margin-top: 0px;
 	margin-left: 20px;
